demos: Fix horizontal scrolling bug

--- a/demos/ve/demo.css
+++ b/demos/ve/demo.css
@@ -16,7 +16,7 @@ body {
 
 .ve-demo-logo {
 	float: right;
-	margin: 0.5em -0.4em 0 0;
+	margin: 0.5em 0 0 0;
 	background: url('VisualEditor-logo.svg') no-repeat;
 	background-size: contain;
 	width: 10.75em;
