--- a/demos/ve/demo.desktop.css
+++ b/demos/ve/demo.desktop.css
@@ -7,7 +7,7 @@
 /* Demo */
 
 .ve-demo-logo {
-	padding-right: 2.5em;
+	padding-right: 2.1em;
 }
 
 .ve-demo-targetToolbar {
