--- a/demos/ve/demo.mobile.css
+++ b/demos/ve/demo.mobile.css
@@ -7,7 +7,7 @@
 /* Demo */
 
 .ve-demo-logo {
-	padding-right: 1.5em;
+	padding-right: 1.1em;
 }
 
 .ve-demo-surfaceToolbar-read {
